--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-tree-view",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@types/classnames": "^2.2.6",
     "classnames": "^2.2.6",
